# cuTest

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMake/: Config.cmake.in  cutest.pc.in  cutest_main.pc.in
include/: cuTest.cuh  cuTest_main.cuh
lib/: CMakeLists.txt  TestCase.cuh  TestSuite.cuh  cpu.cu  cuTest.cu  gpu.cu  helper.cuh
tests/: CMakeLists.txt  main.cu
